[package]
name = "monoio-pg"
version = "0.1.0"
edition = "2024"
authors = ["kowito <hi@kowito.com>"]
description = "High-performance asynchronous PostgreSQL driver for monoio"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kowito/monoio-pg"
readme = "README.md"
keywords = ["postgres", "monoio", "async", "database", "driver"]
categories = ["database", "asynchronous"]


[dependencies]
monoio = "0.2"
monoio-codec = "0.3"
postgres-protocol = "0.6"
postgres-types = { version = "0.2", features = ["derive"] }
fallible-iterator = "0.2"
bytes = "1.6"
byteorder = "1.5"
thiserror = "1.0"
md-5 = "0.10"
sha2 = "0.10"
base64 = "0.22"
hmac = "0.12"
percent-encoding = "2.3"
hex = "0.4"
rand = "0.8"
pin-project-lite = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
pbkdf2 = "0.12"
subtle = "2.6"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
monoio = { version = "0.2.4", features = ["macros"] }
bytes = "1.6"
hex = "0.4"
